Kubernetes/1.32.0/alloy-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: alloy-ds
  namespace: logging
spec:
  selector:
    matchLabels:
      app: alloy-ds
  template:
    metadata:
      labels:
        app: alloy-ds
    spec:
      containers:
        - name: alloy-ds
          image: grafana/alloy:latest
          volumeMounts:
            - name: alloy-config-ds
              mountPath: /etc/alloy
            - name: log
              mountPath: /log
      tolerations:  # 添加容忍的声明
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      volumes:
        - name: alloy-config-ds
          configMap:
            name: alloy-config-ds
        - name: log
          hostPath:
            path: /var/log
