Kubernetes/1.32.0/alloy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: alloy
  namespace: logging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alloy
  template:
    metadata:
      labels:
        app: alloy
    spec:
      serviceAccount: alloy
      containers:
        - name: alloy
          image: grafana/alloy:latest
          volumeMounts:
            - name: alloy-config
              mountPath: /etc/alloy
      volumes:
        - name: alloy-config
          configMap:
            name: alloy-config
