Kubernetes/1.32.0/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    name: app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: app
spec:
  selector:
    matchLabels:
      run: app
  replicas: 1
  template:
    metadata:
      labels:
        run: app
    spec:
      containers:
      - name: app
        image: registry.k8s.io/echoserver:1.10
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: app
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    run: app

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app.huhaiqing.com.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
