Kubernetes/1.32.0/jenkins.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-tools

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins
  namespace: devops-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins-admin
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: jenkins-storage
              mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-storage
          nfs:
            server: 131d6149a1d-osm8.us-east-1.nas.aliyuncs.com
            path: /jenkins

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: devops-tools
spec:
  selector:
    app: jenkins
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: devops-tools
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.huhaiqing.com.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 80
